Name:          vintage-basic
Version:       1.0
Cabal-Version: >= 1.6
Stability:     experimental
Synopsis:      Interpreter for 1970s-era BASIC
Description:
    An interpreter for what is essentially Microsoft BASIC v2,
    what you might find on a computer in the late 70s or early
    80s, such as the Commodore 64.
    .
    Rather than making use of traditional stack-based primitives,
    the implementation uses monad transformers, including one
    with resumable exceptions that can caught by a program's
    continuation rather than its context.
Category:           Compilers/Interpreters
License:            BSD3
License-File:       LICENSE.txt
Author:             Lyle Kopnicky
Maintainer:         lyle@vintage-basic.net
Homepage:           http://www.vintage-basic.net
Build-Type:         Simple
Tested-With:        GHC==6.10.1
Extra-Source-Files: test/Language/VintageBasic/*.hs run_tests.hs examples/*.bas README.txt doc/*.html

Executable vintbas
  Main-is:        Basic.hs
  Build-Depends:  base >=3,
                  array >=0.1,
                  mtl >=1.1,
                  parsec >=2.1,
                  random >=1,
                  time >=1.1,
                  HUnit >=1.2,
                  directory >=1,
                  process >=1,
                  regex-base >=0.72,
                  regex-posix >=0.72,
                  filepath >=1.1
  HS-Source-Dirs: src
  GHC-Options:    -Wall
