Name:          vintage-basic
Version:       1.0.3
Cabal-Version: >= 1.10
Stability:     experimental
Synopsis:      Interpreter for microcomputer-era BASIC
Description:
    An interpreter for what is essentially Microsoft BASIC v2,
    what you might find on a computer in the late 70s or early
    80s, such as the Commodore 64.
    .
    Rather than making use of traditional stack-based primitives,
    the implementation uses monad transformers, including one
    with resumable exceptions that can caught by a program's
    continuation rather than its context.
Category:           Compilers/Interpreters
License:            BSD3
License-File:       LICENSE.txt
Author:             Lyle Kopnicky
Maintainer:         lyle@vintage-basic.net
Homepage:           http://www.vintage-basic.net
Build-Type:         Simple
Tested-With:        GHC==8.0.2
Extra-Source-Files: test/Language/VintageBasic/*.hs run_tests.hs examples/*.bas README.txt doc/*.html

Executable vintbas
  Main-is:        Basic.hs
  Build-Depends:  base >=4.9 && <5,
                  array >=0.1,
                  hashable >=1.2,
                  hashtables >=1.2,
                  mtl >=1.1,
                  parsec >=2.1,
                  random >=1,
                  time >=1.1,
                  HUnit >=1.2,
                  directory >=1,
                  process >=1,
                  regex-base >=0.72,
                  regex-posix >=0.72,
                  filepath >=1.1
  HS-Source-Dirs: src
  GHC-Options:    -Wall
  Default-Language: Haskell2010
  Other-Modules: Control.Monad.CPST,
                 Control.Monad.CPST.DurableTraps,
                 Control.Monad.CPST.ExceptionHandlers,
                 IO.IOStream,
                 Language.VintageBasic.BasicMonad,
                 Language.VintageBasic.Builtins,
                 Language.VintageBasic.Executer,
                 Language.VintageBasic.FloatParser,
                 Language.VintageBasic.Interpreter,
                 Language.VintageBasic.LexCommon,
                 Language.VintageBasic.LineScanner,
                 Language.VintageBasic.Parser,
                 Language.VintageBasic.Printer,
                 Language.VintageBasic.Result,
                 Language.VintageBasic.RuntimeParser,
                 Language.VintageBasic.Syntax,
                 Language.VintageBasic.Tokenizer

Test-Suite test-vintbas
    type:       exitcode-stdio-1.0
    main-is:    run_tests.hs
    build-depends: base
    default-language: Haskell2010
